--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,24 @@ body {
     margin-top: 10px;
     text-align: center;
 }
+
+#game-over {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 32px;
+    flex-direction: column;
+}
+
+#restart-btn {
+    margin-top: 10px;
+    padding: 5px 15px;
+    font-size: 16px;
+}
